--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,13 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
 
 /*
+	Custom style by Amanda
+*/
+.avatar-round {
+	border-radius:50%
+}
+
+/*
 	Prologue by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -2119,7 +2126,7 @@ input, select, textarea {
 		}
 
 		#logo .image {
-			position: absolute;
+			/*position: absolute;*/
 			left: 0;
 			top: 0;
 		}
